[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/themes/stylebox/notify/notify_icon_bg.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/dynamicfont/notify_icon_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/dynamicfont/heading5.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/dynamicfont/subtext.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/themes/stylebox/notify/notify_bg.tres" type="StyleBox" id=5]
[ext_resource path="res://scripts/NotifyThing.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Popup"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.120742, 0.297302 ),
"update": 0,
"values": [ Vector2( 112, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.189465, 0.297302 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.420448, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:rect_min_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 343, 100 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 343, 90 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "swipe_away"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.353553, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -100, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.353553, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ 0.0, -5.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:rect_min_size")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 343, 100 ), Vector2( 343, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}

[node name="Notify" type="Control"]
margin_right = 343.0
margin_bottom = 100.0
rect_min_size = Vector2( 343, 100 )
script = ExtResource( 6 )

[node name="NotifyContainer" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 343.0
margin_bottom = 90.0
rect_min_size = Vector2( 343, 90 )
rect_pivot_offset = Vector2( 343, 45 )
rect_clip_content = true
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimPlay" type="AnimationPlayer" parent="NotifyContainer"]
method_call_mode = 1
anims/Popup = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/swipe_away = SubResource( 3 )

[node name="IconContainer" type="Panel" parent="NotifyContainer"]
anchor_right = 0.265
anchor_bottom = 1.0
margin_right = -0.894997
rect_min_size = Vector2( 90, 90 )
custom_styles/panel = ExtResource( 1 )

[node name="Icon" type="Label" parent="NotifyContainer/IconContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 45, 45 )
custom_colors/font_color_shadow = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 2 )
text = ""
align = 1
valign = 1

[node name="Content" type="VBoxContainer" parent="NotifyContainer"]
anchor_left = 0.309
anchor_right = 1.003
anchor_bottom = 1.0
margin_left = -0.0600052
margin_right = 148.928
alignment = 1

[node name="Heading" type="Label" parent="NotifyContainer/Content"]
margin_top = 21.0
margin_right = 387.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "Something Happened"

[node name="Sub" type="Label" parent="NotifyContainer/Content"]
margin_top = 50.0
margin_right = 387.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = ExtResource( 4 )
text = "If you don’t care, swipe this."

[connection signal="gui_input" from="NotifyContainer" to="." method="_on_NotifyContainer_gui_input"]
